network/network-policies/allow-same-namespace.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
